--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,26 @@
-body{
-    color: blue;
+body
+{
+    color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+#container
+{
+    width: 50%;
+    padding: 1em;
+    text-align: left;
+    border: 4px solid #ddd;
+    margin: 10px auto;
+}
+
+#container h1
+{
+    font-size: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 0px;
 }
