--- a/css/styles.css
+++ b/css/styles.css
@@ -4,17 +4,42 @@ body
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
-    margin: 0;
     padding: 0;
+}
+
+#cabecera
+{
+    background-color: rgb(0, 30, 161);
+    color: white;
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.5);
+    margin: 0px;
+    margin-bottom: 20px;
+    padding: 0.5em;
+    text-align: right;
+    font-weight: bold;
+}
+
+#cabecera #tagline
+{
+    font-size: 0.8em;
+}
+
+#cabecera span
+{
+    padding: 0 0.5em 0 0;
 }
 
 #container
 {
     width: 50%;
-    padding: 1em;
     text-align: left;
     border: 4px solid #ddd;
     margin: 10px auto;
+}
+
+#post
+{
+    padding: 0 1.2em;
 }
 
 #container h1
@@ -22,5 +47,4 @@ body
     font-size: 30px;
     text-align: center;
     text-transform: uppercase;
-    margin-top: 0px;
 }
