--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,14 @@ body
 {
     color: #333;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
     padding: 0;
 }
 
 #cabecera
 {
-    background-color: rgb(0, 30, 161);
+    background-color: rgb(1, 61, 63);
     color: white;
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.5);
     margin: 0px;
