--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body
 {
+    background-color: #444;
     color: #333;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
@@ -24,6 +25,13 @@ body
     font-size: 0.8em;
 }
 
+#cabecera #logo
+{
+    width: 30px;
+    vertical-align: middle;
+    margin-top: -4px;
+}
+
 #cabecera span
 {
     padding: 0 0.5em 0 0;
@@ -31,6 +39,7 @@ body
 
 #container
 {
+    background-color: #ddd;
     width: 50%;
     text-align: left;
     border: 4px solid #ddd;
