--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ body
     text-align: left;
     border: 4px solid #ddd;
     margin: 10px auto;
+    margin-bottom: 0;
 }
 
 #post
@@ -47,4 +48,16 @@ body
     font-size: 30px;
     text-align: center;
     text-transform: uppercase;
+}
+
+#footer
+{
+    background-color:#ddd;
+    color: black;
+    width: 50.4%;
+    margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 12px;
 }
