--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ body
 
 #container
 {
-    background-color: #ddd;
+    background-color: white;
     width: 50%;
     text-align: left;
     border: 4px solid #ddd;
