--- a/css/styles.css
+++ b/css/styles.css
@@ -60,4 +60,6 @@ body
     font-weight: bold;
     text-transform: uppercase;
     font-size: 12px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
